# python-project-starter

./: .env  404.html  CHANGELOG.md  Makefile  README.md  api-documentation.html  explanation.html  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  test.html  tutorials.html
.github/workflows/: build_and_push.yml  lint.yml  orchestrator.yml  pages.yml  release.yml  test.yml
search/: search_index.json
src/app/: main.py
src/example_app/: app.py
