[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["ithingv34 <ithingv34@gmail.com>"]
readme = "README.md"
packages = [{include = "example_app"}]
homepage = "https://github.com/ithingv34/python-project-starter"
repository = "https://github.com/ithingv34/python-project-starter"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
fastapi = "^0.101.0"
uvicorn = {extras = ["standrad"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
